--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,13 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   http: ^0.12.2
+  json_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.3
+  json_serializable: ^3.5.0
 
 flutter:
   uses-material-design: true
