--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^0.12.2
   json_annotation: ^3.1.0
   geolocator: ^6.0.0+4
+  shared_preferences: ^0.5.12+2
 
 dev_dependencies:
   flutter_test:
