--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.2
   json_annotation: ^3.1.0
-  geolocator: ^6.0.0+4
+  geolocator: ^6.1.0
   shared_preferences: ^0.5.12+2
 
 dev_dependencies:
