--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.10.3
   json_serializable: ^3.5.0
+  mockito: ^4.1.3
 
 flutter:
   uses-material-design: true
