--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.3
   http: ^0.13.3
   json_annotation: ^4.0.1
-  geolocator: ^7.2.0
+  geolocator: ^7.2.0+1
   shared_preferences: ^2.0.6
 
 dev_dependencies:
